# supabash

./: -  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  config.yaml.example  docker-compose.integration.yml  install.sh  pyproject.toml  report.json  report.md  requirements.txt  requirements_system.txt  sitecustomize.py  supabash_runner
docs/: agentic-audit-chat-roadmap.md  ai-audit-workflow.md  ai-llm-security-roadmap.md  integration-testing.md  release.md  system-requirements.md
example_reports/: ai-audit-20260129-205201.html  ai-audit-20260129-205201.json  ai-audit-20260129-205201.md  ai-audit-bsi-20260206-091136.html  ai-audit-bsi-20260206-091136.json  ai-audit-bsi-20260206-091136.md  ai-audit-iso-20260206-222828.html  ai-audit-iso-20260206-222828.json  ai-audit-iso-20260206-222828.md  ai-audit-pci-20260206-222338.html  ai-audit-pci-20260206-222338.json  ai-audit-pci-20260206-222338.md  ai-audit-soc2-20260206-215533.html  ai-audit-soc2-20260206-215533.json  ai-audit-soc2-20260206-215533.md
tests/: test_aggressive_caps.py  test_ai_audit_cli.py  test_ai_audit_orchestrator.py  test_aircrack_ng.py  test_artifacts.py  test_audit.py  test_audit_cli.py  test_audit_parallel_web.py  test_browser_use.py  test_chat_audit.py  test_chat_clarifier.py  test_chat_memory.py  test_chat_session.py  test_dnsenum.py  test_doctor_cli.py  test_enum4linux_ng.py  test_extended_help.py  test_ffuf.py  test_gobuster.py  test_httpx.py  test_hydra.py  test_integration_dvwa.py  test_integration_juiceshop.py  test_integration_supabase.py  test_jobs.py  (+37 more)
(+151 files in other folders)
